src/App.css
@import url("https://fonts.googleapis.com/css2?family=Londrina+Sketch&family=News+Cycle&display=swap");
/* font-family: 'Londrina Sketch', cursive;
font-family: 'News Cycle', sans-serif; */

:root {
  --secondary: #caf7e3;
  --background: #edffec;
  --primary: #e4bad4;
  --tertiary: #f6dfeb;
}

.main-container {
  display: inline;
  /* margin: 0.5rem; */
  margin: auto;
  background-color: var(--background);
}

.greeting-container {
  display: flex;
  text-align: center;
  flex-direction: column;
}

.lyric-container {
  border: 2px solid var(--tertiary);
  margin: 40px;
  padding: 20px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.album-page {
  display: flex;
  justify-content: center;
}

label {
  display: none;
}

.row {
  display: flex;
  justify-content: space-evenly;
  padding-bottom: 80px;
}

.card {
  padding: 2rem;
  margin: 0.5rem;
}

h1 {
  margin-top: 4rem;
  color: var(--primary);
  text-align: center;
  font-family: "News Cycle", sans-serif;
}

h2 {
  color: var(--secondary);
  text-align: center;
  font-family: "News Cycle", sans-serif;
}
h3 {
  margin-top: 4rem;
  color: var(--secondary);
  text-align: center;
  font-family: "News Cycle", sans-serif;
}

p {
  margin: 20px;
}

img {
  border: solid 2px var(--secondary);
}

th {
  font-family: "News Cycle", sans-serif;
}

.heart-like {
  text-align: center;
}

.topsong-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: limegreen solid 2px;
  padding: 5px;
}

#back-button {
  border: none;
  color: var(--primary);
  font-size: 1rem;
}

.topsong-button {
  border: none;
  margin-top: 10px;
}

.x-button {
  color: red;
}

.form-group {
  width: 50%;
  display: flex;
  justify-content: space-evenly;
  margin: auto;
  margin-top: 2rem;
}

.update-bttn {
  margin-left: 1rem;
}

.explore-bttn {
  width: 50%;
  display: flex;
  justify-content: space-evenly;
  margin: auto;
  margin-top: 2rem;
  padding: 30px;
}

